fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ button {
 #lessonScore, #current, #complete {
   color: #ffffff;
   font-family: 'Oxygen', sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   padding-top: 10px;
   
 }
